Ignore list support and some minor refactoring for steam2backloggery

--- a/steam2backloggery.cfg
+++ b/steam2backloggery.cfg
@@ -14,3 +14,19 @@
 -- CONSOLE = [[PC]]
 -- CONSOLE = [[PCDL]]
 -- CONSOLE = [[Steam]]
+
+-- Game ignore list - put games you don't want it to try adding from Steam in
+-- here.
+-- It supports simple globbing: * matches anything. So
+-- "Borderlands DLC: *" means to ignore any game starting with
+-- "Borderlands DLC: ".
+-- This example IGNORE will ignore all Borderlands, Defense Grid, FONV, and
+-- Magicka DLC, as well as any game ending in "Soundtrack" or "Beta".
+IGNORE = [[
+    Borderlands DLC: *
+    Defense Grid: Resurgence *
+    Fallout New Vegas: *
+    Magicka: *
+    * Soundtrack
+    * Beta
+]]
