README update; EDITOR setting in config file.

--- a/steam2backloggery.cfg
+++ b/steam2backloggery.cfg
@@ -1,6 +1,7 @@
 -- configuration file for steam2backloggery
 -- lines starting with '--' are comments
--- anything not specified here, the user will be asked for
+-- anything not specified here, the user will be asked for, or a sensible
+-- default will be chosen.
 
 -- Path to Steam installation
 -- STEAM = [[C:/Program Files (x86)/Steam/Steam.exe]]
@@ -15,8 +16,14 @@
 -- CONSOLE = [[PCDL]]
 -- CONSOLE = [[Steam]]
 
+-- Editor to use for the game list. If omitted, defaults to notepad.
+-- EDITOR = [[notepad]]
+-- EDITOR = [[javaw "c:/Program Files/JEdit/jedit.jar"]]
+-- EDITOR = [[vim]]
+
 -- Game ignore list - put games you don't want it to try adding from Steam in
--- here.
+-- here. If omitted, defaults to [[]] (ignores nothing).
+-- 
 -- It supports simple globbing: * matches anything. So
 -- "Borderlands DLC: *" means to ignore any game starting with
 -- "Borderlands DLC: ".
