Example configuration fix

--- a/steam2backloggery.cfg
+++ b/steam2backloggery.cfg
@@ -18,7 +18,7 @@
 
 -- Editor to use for the game list. If omitted, defaults to notepad.
 -- EDITOR = [[notepad]]
--- EDITOR = [[javaw "c:/Program Files/JEdit/jedit.jar"]]
+-- EDITOR = [[javaw -jar "c:/Program Files/JEdit/jedit.jar"]]
 -- EDITOR = [[vim]]
 
 -- Game ignore list - put games you don't want it to try adding from Steam in
