Config file update to include STEAMNAME and STEAMID

--- a/steamtools.cfg
+++ b/steamtools.cfg
@@ -1,4 +1,4 @@
--- configuration file for steam2backloggery
+-- configuration file for steamtools programs
 -- lines starting with '--' are comments
 -- anything not specified here, the user will be asked for, or a sensible
 -- default will be chosen.
@@ -6,6 +6,17 @@
 -- Path to Steam installation
 -- STEAM = [[C:/Program Files (x86)/Steam/Steam.exe]]
 -- STEAM = [[F:\Games\Steam\Steam.exe]]
+
+-- Steam username. Optional, used by some programs for file names etc.
+-- STEAMNAME = [[toxicfrog]]
+
+-- Steam numeric user ID. Steamtools will try to determine this from your Steam
+-- log file; this will override it. Use if it gets it wrong or can't figure it
+-- out.
+-- Steam IDs are usually in the form X:Y:Z where X, Y, and Z are numbers. Break
+-- it down as shown in this example.
+-- shows up as 0:1:3103024 in the log file
+-- STEAMID = { 0, 1, 3103024 }
 
 -- Backloggery username and password
 -- USER = [[Me]]
